# overlayward

./: .gitignore  Cargo.toml  README.md  overlayward.yaml
crates/ow-cli/src/: client.rs  commands.rs  lib.rs
crates/ow-core/config/: Cargo.toml
crates/ow-core/config/src/: lib.rs  merge.rs  model.rs  toml_parse.rs  yaml.rs
crates/ow-core/image/: Cargo.toml
crates/ow-core/image/src/: error.rs  lib.rs  manager.rs  registry_client.rs  store.rs  types.rs
crates/ow-core/runtime/: Cargo.toml
crates/ow-core/runtime/src/: builder.rs  lib.rs  log_store.rs  machine.rs  registry.rs  state.rs
crates/ow-core/traits/: Cargo.toml
crates/ow-core/traits/src/: backend.rs  error.rs  handles.rs  lib.rs
crates/ow-ffi/: Cargo.toml
crates/ow-ffi/src/: lib.rs
crates/ow-gateway/: Cargo.toml  build.rs
crates/ow-gateway/src/: error.rs  extract.rs  grpc_services.rs  lib.rs  registry.rs
crates/ow-gateway/src/middleware/: auth.rs  mod.rs
crates/ow-gateway/src/proto/: overlayward.v1.rs
crates/ow-gateway/src/routes/: approval.rs  audit.rs  exec.rs  inter.rs  mod.rs  network.rs  resource.rs  sandbox.rs  snapshot.rs
crates/ow-linux/: Cargo.toml  build.rs
crates/ow-linux/csrc/: cgroup.c  mount.c  namespace.c
crates/ow-linux/csrc/include/: ow_linux.h
crates/ow-linux/src/: filesystem.rs  isolation.rs  lib.rs  overlay.rs  process.rs
crates/ow-linux/src/ffi/: cgroup.rs  mod.rs  mount.rs  namespace.rs
crates/ow-linux/tests/: m1_integration.rs  m2_image_pipeline.rs
crates/ow-macros/src/: lib.rs
crates/ow-policy/src/: mock.rs
crates/ow-protocol/: Cargo.toml
crates/ow-protocol/src/: lib.rs
crates/ow-sandbox/src/: lib.rs  mock.rs  routes.rs
crates/ow-sdk/: Cargo.toml
crates/ow-sdk/src/: client.rs
crates/ow-service-common/: Cargo.toml
crates/ow-service-common/src/: lib.rs
crates/ow-types/src/models/: approval.rs  audit.rs  exec.rs  file.rs  network.rs  resource.rs  volume.rs
crates/rkforge/: Cargo.toml
crates/rkforge/src/: images.rs  lib.rs  pod_task.rs  registry.rs  rt.rs  storage.rs
crates/rkforge/src/commands/: mod.rs
crates/rkforge/src/commands/config_cli/: mod.rs
crates/rkforge/src/commands/container/: rootfs_mount.rs
crates/rkforge/src/commands/pod/: standalone.rs
crates/rkforge/src/compressor/: tar_gz_compressor.rs
crates/rkforge/src/config/: auth.rs  image.rs  meta.rs
crates/rkforge/src/image/: stage_executor.rs
crates/rkforge/src/oci_spec/: mod.rs
crates/rkforge/src/pull/: layer.rs  mod.rs
crates/rkforge/src/utils/: cli.rs
src/: main.rs
src/ow-audit/: Cargo.toml
src/ow-audit/src/: lib.rs  mock.rs
src/ow-cli/: Cargo.toml
src/ow-cli/src/: client.rs  commands.rs  lib.rs  output.rs
src/ow-data/: Cargo.toml
src/ow-data/src/: lib.rs  mock.rs
src/ow-gateway/: Cargo.toml
src/ow-gateway/src/: auth.rs  lib.rs  mcp.rs  mock.rs  traits.rs
src/ow-gateway/src/routes/: events.rs  file.rs  volume.rs
src/ow-macros/: Cargo.toml
src/ow-macros/src/: lib.rs
src/ow-policy/: Cargo.toml
src/ow-policy/src/: lib.rs
src/ow-sandbox/: Cargo.toml
src/ow-types/: Cargo.toml
src/ow-types/src/: auth.rs  error.rs  lib.rs  response.rs
src/ow-types/src/models/: approval.rs  audit.rs  event.rs  exec.rs  file.rs  inter.rs  mod.rs  network.rs  resource.rs  sandbox.rs  snapshot.rs  volume.rs
