[package]
name = "overlayward"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "overlayward"
path = "src/main.rs"

[[bin]]
name = "ow-gateway"
path = "src/bin/ow-gateway.rs"

[[bin]]
name = "ow-sandbox"
path = "src/bin/ow-sandbox.rs"

[[bin]]
name = "ow-policy"
path = "src/bin/ow-policy.rs"

[[bin]]
name = "ow-audit"
path = "src/bin/ow-audit.rs"

[[bin]]
name = "ow-data"
path = "src/bin/ow-data.rs"

[dependencies]
ow-types = { path = "crates/ow-types" }
ow-cli = { path = "crates/ow-cli" }
ow-gateway = { path = "crates/ow-gateway" }
ow-sandbox = { path = "crates/ow-sandbox" }
ow-policy = { path = "crates/ow-policy" }
ow-audit = { path = "crates/ow-audit" }
ow-data = { path = "crates/ow-data" }
ow-service-common = { path = "crates/ow-service-common" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[workspace]
resolver = "2"
members = [
    "crates/ow-macros",
    "crates/ow-types",
    "crates/ow-sdk",
    "crates/ow-ffi",
    "crates/ow-cli",
    "crates/ow-service-common",
    "crates/ow-sandbox",
    "crates/ow-policy",
    "crates/ow-audit",
    "crates/ow-data",
    "crates/ow-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rk8s-dev/overlayward"

[workspace.dependencies]
ow-macros = { path = "crates/ow-macros" }
ow-types = { path = "crates/ow-types" }
ow-service-common = { path = "crates/ow-service-common" }

serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
jiff = "0.2"
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
smallvec = { version = "1", features = ["serde"] }
phf = { version = "0.11", features = ["macros"] }
parking_lot = "0.12"
papaya = "0.2"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tonic = "0.13"
prost = "0.13"
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }

[workspace.dependencies.tonic-build]
version = "0.13"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3
