[package]
name = "overlayward"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "overlayward"
path = "src/main.rs"

[[bin]]
name = "ow-gateway"
path = "src/bin/ow-gateway.rs"

[[bin]]
name = "ow-sandbox"
path = "src/bin/ow-sandbox.rs"

[[bin]]
name = "ow-policy"
path = "src/bin/ow-policy.rs"

[[bin]]
name = "ow-audit"
path = "src/bin/ow-audit.rs"

[[bin]]
name = "ow-data"
path = "src/bin/ow-data.rs"

[[bin]]
name = "h3-test"
path = "src/bin/h3-test.rs"

[dependencies]
ow-types = { path = "src/ow-types" }
ow-cli = { path = "src/ow-cli" }
ow-gateway = { path = "src/ow-gateway" }
ow-sandbox = { path = "src/ow-sandbox" }
ow-policy = { path = "src/ow-policy" }
ow-audit = { path = "src/ow-audit" }
ow-data = { path = "src/ow-data" }
ow-service-common = { path = "src/ow-service-common" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
rustls = { workspace = true }
bytes = { workspace = true }
http = "1"

[workspace]
resolver = "2"
members = [
    "src/ow-macros",
    "src/ow-types",
    "src/ow-cli",
    "src/ow-service-common",
    "src/ow-sandbox",
    "src/ow-policy",
    "src/ow-audit",
    "src/ow-data",
    "src/ow-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rk8s-dev/overlayward"

[workspace.dependencies]
ow-macros = { path = "src/ow-macros" }
ow-types = { path = "src/ow-types" }
ow-service-common = { path = "src/ow-service-common" }

serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
jiff = "0.2"
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
smallvec = { version = "1", features = ["serde"] }
phf = { version = "0.11", features = ["macros"] }
parking_lot = "0.12"
papaya = "0.2"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
h3-axum = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3
