[workspace]
resolver = "2"
members = [
    "crates/ow-core/traits",
    "crates/ow-core/runtime",
    "crates/ow-core/config",
    "crates/ow-core/image",
    "crates/ow-linux",
    "crates/ow-protocol",
    "crates/rkforge",
    "bin/overlayward",
    "bin/overlayward-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
oci-client = "0.14"
oci-spec = "0.7"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
indicatif = "0.17"
once_cell = "1"
dirs = "5"
confy = "0.6"
chrono = "0.4"
base64 = "0.22"
nix = { version = "0.29", features = ["mount", "fs", "process", "user", "sched", "term"] }
