[package]
name = "ow-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
overlayward-sdk = { path = "../ow-sdk" }
ow-gateway = { path = "../ow-gateway" }
tokio = { workspace = true }

[build-dependencies]
cbindgen = "0.28"
