[package]
name = "ow-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ow-types = { workspace = true }
ow-service-common = { workspace = true }
axum = { workspace = true, features = ["ws", "multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
sonic-rs = { workspace = true }
serde = { workspace = true }
serde_json = "1"
async-trait = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
phf = { workspace = true }
papaya = { workspace = true }
parking_lot = { workspace = true }
jiff = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
