[package]
name = "ow-service-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sonic-rs = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
