[package]
name = "ow-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ow-types = { workspace = true }
ow-service-common = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
jiff = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
papaya = { workspace = true }
parking_lot = { workspace = true }
axum = { version = "0.8", features = ["ws", "multipart"] }
ow-cli = { path = "../ow-cli" }
clap = { workspace = true }
serde_json = "1"
reqwest = { workspace = true }
